# w3wall-comment-meta-contract

./: .gitignore  Cargo.toml  Config.toml  build.sh
aqua/: meta-contract.aqua
configs/: deploy-cfg.json
scripts/: deploy.sh
src/: data.rs  defaults.rs  main.rs  types.rs
