[package]
name = "meta-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marine-rs-sdk = { version = "0.7.1", features = ["logger"] }
log = "0.4.14"
serde = "1.0.152"
serde_json = "1.0.91"
hex = "0.4.3"
ethabi = "18.0.0"